# deadstock-search-replit

./: .gitignore  .replit  202410法人院所間移動検索用 (7).xlsx  HudoAddList (1).csv  README.md  ZaikoKin (9).csv  auth.py  database.py  file_processor.py  generate_sample_data.py  main.py  netlify.toml  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  sample_inventory.csv  sample_purchase_history.xlsx  sample_yj_codes.csv
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.streamlit/: config.toml
.upm/: store.json
