[project]
name = "repl-nix-pharmainventorymanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "fpdf>=1.7.2",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.2.5",
    "streamlit>=1.40.2",
]
